--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.parquet filter=lfs diff=lfs merge=lfs -text
+*.safetensors filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
